Replaced internal copies of 'com.bewsoftware.utils.io' files with external library dependency.